--- a/.gitignore
+++ b/.gitignore
@@ -110,9 +110,9 @@ data
 .DS_Store
 
 # custom
-*.pkl
-*.pkl.json
-*.log.json
+#*.pkl
+#*.pkl.json
+#*.log.json
 docs/modelzoo_statistics.md
 mmdet/.mim
 
